# rss_tiktok

./: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  requirements.txt  run.py  subscriptions.csv  tiktok_rss.py
.github/workflows/: flat.yml
rss/: mongepapauli_.xml  presidenciacr.xml
