[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiktok-rss"
version = "3.0.0"
description = "Generador ultra-optimizado de feeds RSS para TikTok"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "TikTok RSS Team"}
]
dependencies = [
    "TikTokApi>=7.0.0",
    "feedgen>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I", "C4", "UP"]